Working on shit

--- a/2.1/1/makefile
+++ b/2.1/1/makefile
@@ -1,2 +1,4 @@
-make: main.c las.c
-	gcc -o main.c las.c
+main: main.c dmatrix.c
+	gcc -o out.out main.c dmatrix.c
+main2: main2.c dmatrix.c
+	gcc -o out2.out main2.c dmatrix.c
